issue #84: fixed generating open api specs and added this step to Jenkins Pipeline